log
Sun 16 Oct 2022 08:44:08 PM UTC: 
 tests:  0|4
total_score: 0/70
f60e1ba
Sun 16 Oct 2022 10:30:56 PM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
bd0dee6
Sun 16 Oct 2022 10:41:25 PM UTC: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
59efeab
Sun 16 Oct 2022 10:41:34 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
cb57243
Sun 16 Oct 2022 11:04:28 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c:24:1: error: expected identifier or ‘(’ before ‘}’ token
   24 | }
      | ^
Compilation failed
30a7cf8
Sun 16 Oct 2022 11:04:36 PM UTC: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|2
total_score: 20/70
868727e
Sun 16 Oct 2022 11:20:55 PM UTC: 
 heap.c | 28 ++++++++++++++++++++++------
 1 file changed, 22 insertions(+), 6 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:40: error: ‘s’ undeclared (first use in this function)
   22 |    return (void*)pq->heapArray[0].data;s
      |                                        ^
heap.c:22:40: note: each undeclared identifier is reported only once for each function it appears in
heap.c:22:41: error: expected ‘;’ before ‘}’ token
   22 |    return (void*)pq->heapArray[0].data;s
      |                                         ^
      |                                         ;
   23 | }
      | ~                                        
Compilation failed
e2708fb
Sun 16 Oct 2022 11:23:12 PM UTC: 
 heap.c | 35 +++++++++++++++++++++--------------
 1 file changed, 21 insertions(+), 14 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:40: error: ‘s’ undeclared (first use in this function)
   22 |    return (void*)pq->heapArray[0].data;s
      |                                        ^
heap.c:22:40: note: each undeclared identifier is reported only once for each function it appears in
heap.c:22:41: error: expected ‘;’ before ‘}’ token
   22 |    return (void*)pq->heapArray[0].data;s
      |                                         ^
      |                                         ;
   23 | }
      | ~                                        
heap.c: In function ‘heap_push’:
heap.c:49:14: error: ‘posInf’ undeclared (first use in this function)
   49 |       sup = (posInf - 1)/2;
      |              ^~~~~~
test.c:276:5: error: ‘main’ is normally a non-static function [-Werror=main]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
test.c:12:6: error: unused variable ‘msg’ [-Werror=unused-variable]
   12 | char msg[300];
      |      ^~~
At top level:
test.c:276:5: error: ‘main’ defined but not used [-Werror=unused-function]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
35b70d1
Sun 16 Oct 2022 11:23:40 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:40: error: ‘s’ undeclared (first use in this function)
   22 |    return (void*)pq->heapArray[0].data;s
      |                                        ^
heap.c:22:40: note: each undeclared identifier is reported only once for each function it appears in
heap.c:22:41: error: expected ‘;’ before ‘}’ token
   22 |    return (void*)pq->heapArray[0].data;s
      |                                         ^
      |                                         ;
   23 | }
      | ~                                        
heap.c: In function ‘heap_push’:
heap.c:49:14: error: ‘posInf’ undeclared (first use in this function)
   49 |       sup = (posInf - 1)/2;
      |              ^~~~~~
Compilation failed
f319581
Sun 16 Oct 2022 11:23:52 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:40: error: ‘s’ undeclared (first use in this function)
   22 |    return (void*)pq->heapArray[0].data;s
      |                                        ^
heap.c:22:40: note: each undeclared identifier is reported only once for each function it appears in
heap.c:22:41: error: expected ‘;’ before ‘}’ token
   22 |    return (void*)pq->heapArray[0].data;s
      |                                         ^
      |                                         ;
   23 | }
      | ~                                        
Compilation failed
e99a9a7
Sun 16 Oct 2022 11:25:05 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
8a2fe10
Sun 16 Oct 2022 11:41:50 PM UTC: 
 heap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:57:19: error: incompatible types when initializing type ‘heapElem *’ {aka ‘struct nodo *’} using type ‘heapElem’ {aka ‘struct nodo’}
   57 |   heapElem* aux = pq->heapArray[0];
      |                   ^~
heap.c:60:9: error: incompatible types when assigning to type ‘heapElem *’ {aka ‘struct nodo *’} from type ‘heapElem’ {aka ‘struct nodo’}
   60 |   aux = pq->heapArray[pq->size];
      |         ^~
heap.c:62:22: error: incompatible types when assigning to type ‘heapElem’ {aka ‘struct nodo’} from type ‘heapElem *’ {aka ‘struct nodo *’}
   62 |   pq->heapArray[0] = aux;
      |                      ^~~
heap.c:68:8: error: ‘mayor’ is a pointer; did you mean to use ‘->’?
   68 |   mayor.data = pq->heapArray[0].data;
      |        ^
      |        ->
heap.c:69:8: error: ‘mayor’ is a pointer; did you mean to use ‘->’?
   69 |   mayor.priority = pq->heapArray[0].priority;
      |        ^
      |        ->
heap.c:73:14: error: ‘mayor’ is a pointer; did you mean to use ‘->’?
   73 |     if (mayor.priority <= pq->heapArray[i].priority){
      |              ^
      |              ->
heap.c:75:15: error: incompatible types when assigning to type ‘heapElem *’ {aka ‘struct nodo *’} from type ‘heapElem’ {aka ‘struct nodo’}
   75 |       mayor = pq->heapArray[i];
      |               ^~
heap.c:76:26: error: incompatible types when assigning to type ‘heapElem’ {aka ‘struct nodo’} from type ‘heapElem *’ {aka ‘struct nodo *’}
   76 |       pq->heapArray[i] = aux;
      |                          ^~~
test.c:276:5: error: ‘main’ is normally a non-static function [-Werror=main]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
test.c:12:6: error: unused variable ‘msg’ [-Werror=unused-variable]
   12 | char msg[300];
      |      ^~~
At top level:
test.c:276:5: error: ‘main’ defined but not used [-Werror=unused-function]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
645f016
Sun 16 Oct 2022 11:58:17 PM UTC: 
 heap.c | 34 +++++++++++++++++++---------------
 1 file changed, 19 insertions(+), 15 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:73:5: error: implicit declaration of function ‘swap’ [-Werror=implicit-function-declaration]
   73 |     swap(&pq->heapArray[aux], &pq->heapArray[2*aux+1]);
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
0f82066
Mon 17 Oct 2022 12:05:12 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:73:25: error: lvalue required as left operand of assignment
   73 |     &pq->heapArray[aux] = &pq->heapArray[2*aux+1];
      |                         ^
heap.c:79:10: error: implicit declaration of function ‘swap’ [-Werror=implicit-function-declaration]
   79 |          swap(&pq->heapArray[aux], &pq->heapArray[2*aux+2]);
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
f4dd2b2
Mon 17 Oct 2022 12:11:52 AM UTC: 
 heap.c | 26 --------------------------
 1 file changed, 26 deletions(-)
 tests:  7|1
total_score: 45/70
f6e9fef
